--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     font-size: 1.2em;
     padding-left: 250px;
     padding-right: 250px;
-    min-width: 900px;
+    min-width: 1100;
 }
 
 #upup{
