--- a/style.css
+++ b/style.css
@@ -282,6 +282,12 @@ span.titles h2{
     min-width: 500;
     max-width:1200px;
 }
+#meme{
+    padding-bottom: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 .res{
@@ -367,6 +373,18 @@ span.titles h2{
     color:mediumturquoise;
     font-size: 36px;
 }
+
+
+
+
+.blogTitle{
+    text-align: center;
+}
+
+
+
+
+
 
 
 
