--- a/style.css
+++ b/style.css
@@ -333,6 +333,8 @@ span.titles h2{
 
 .me{
     padding-top: 25px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .me #mailicon{
     transition: transform .5s ease-in-out;
@@ -344,7 +346,7 @@ span.titles h2{
     transform: scale(1.1);
 }
 .me #linkedinicon{
-    padding-left:10px;
+    padding-left:5px;
     transition: transform .5s ease-in-out;
     width: 50px;
     height: auto;
@@ -354,11 +356,12 @@ span.titles h2{
     transform: scale(1.1);
 }
 .me #giticon{
-    padding-left:10px;
+    padding-left:5px;
     padding-bottom: 5px;
     transition: transform .5s ease-in-out;
     width: 40px;
     height: auto;
+
 }
 .me #giticon:hover{
     opacity: 60%;
