--- a/style.css
+++ b/style.css
@@ -395,53 +395,4 @@ span.titles h2{
     text-align: center;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*
-.contact-form{
-    position: relative;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    text-align:center;
-    margin-top: 50px;
-    
-}
-.form-control{
-    width:600px;
-    background-color: gainsboro;
-    margin-bottom: 16px;
-}
-
-input{
-    height: 45px;
-}
-
-form.submit{
-    font-size: 20px;
-    font-weight: bold;
-    letter-spacing: 2px;
-    padding-top: 40px;
-}
-
-form .submit:hover{
-    background-color:rgb(48, 48, 48);
-    color: white;
-}
-*/
+#caption { text-align: center; }  
